# sdk-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  publish.yml
examples/: chat.rs  speech.rs  streaming.rs  tool_calling.rs  vision.rs
src/: auth.rs  client.rs  error.rs  lib.rs  models.rs  streaming.rs
src/resources/: audio.rs  chat.rs  images.rs  mod.rs  models.rs  uploads.rs
src/types/: audio.rs  chat.rs  images.rs  mod.rs  models.rs  ping.rs  shared.rs  uploads.rs
tests/: abort.rs  chat.rs  errors.rs  retries.rs  streaming.rs
tests/common/: mod.rs
