[package]
name = "skailar"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
description = "Official Rust SDK for the Skailar API"
license = "MIT"
authors = ["Skailar"]
repository = "https://github.com/skailar-ai/sdk-rust"
homepage = "https://skailar.com"
documentation = "https://docs.rs/skailar"
readme = "README.md"
keywords = ["skailar", "llm", "ai", "openai-compatible", "sdk"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
futures-timer = "3"
thiserror = "2"
url = "2"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6"
serde_json = "1"
futures-util = { version = "0.3", default-features = false, features = ["std", "async-await"] }

[features]
default = []
tracing = ["dep:tracing"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
